--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,15 @@
     flex-wrap: wrap;
     cursor: pointer;
 }
-.images__flex img {
+.images__flex .holder {
+  width: 100%;
   flex-basis: 33.33%;
   max-width: 33.33%;
-  height: 39vw;
+  height: 40vw;
+}
+.images__flex img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
