--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
+    position: relative;
 }
 .images__flex .holder {
   flex-basis: 33.33%;
@@ -12,6 +13,22 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.modal {
+  border: 2px solid white;
+  background-color: white;
+  padding: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 1s;
+}
+.modal.visible {
+  opacity: 1;
+  transition: opacity 1s;
 }
 
 @media (max-width: 768px) {
