--- a/src/Modal.module.css
+++ b/src/Modal.module.css
@@ -1,4 +1,7 @@
 
+.modal * { 
+  font-family: Arial;
+}
 .modal {
     z-index: -1;
     border: 2px solid white;
@@ -43,3 +46,32 @@
     Z-index: 2;
     background-color: black;
   }
+  .modal__cart {
+    background-color: #f36805;
+    padding: 0.8rem 1.2rem 0.8rem 1.2rem;
+    color: white;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: space-between;
+  }
+  .modal__cart:hover {
+    background-color:#d15802;
+    cursor: pointer;
+  }
+  .modal__quantity {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 21%;
+  }
+  .modal__quantity div {
+    color: #f36805;
+    font-size: 2.5rem;
+  }
+  .modal__quantity div:nth-child(2) {
+    color:black;
+    font-size: 2rem;
+  }
+ 
+
+  
