--- a/src/Cart.module.css
+++ b/src/Cart.module.css
@@ -1,7 +1,7 @@
 .cart__icon {
     background-color: #fb6100;
-    padding: 11px;
-    width: 40px;
+    padding: 12px;
+    width: 34px;
     border-radius: 50%;
     position: fixed;
     z-index: 1;
@@ -12,4 +12,19 @@
     position: relative;
     top: 2px;
     right: 1px;
+}
+.cart__quantity {
+    color: #fb6100;
+    font-weight: 700;
+    position: absolute;
+    right: -3px;
+    top: -4px;
+    z-index: 1;
+    padding: 7px;
+    height: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 37%;
+    background-color: white;
 }
