--- a/src/components/CartIcon.module.css
+++ b/src/components/CartIcon.module.css
@@ -4,9 +4,21 @@
     width: 34px;
     border-radius: 50%;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     right: 20px;
     top: 15px;
+}
+.cart__icon__removed {
+    background-color: transparent;
+    width: auto;
+    padding: 0;
+    margin: 0;
+    top: 1%;
+    right: 3%;
+    font-size: 1.5rem;
+}
+.cart__icon__removed h3 {
+    margin: 0;
 }
 .cart__icon:hover {
     cursor: pointer;
@@ -27,10 +39,13 @@
     top: -4px;
     z-index: 1;
     padding: 7px;
-    height: 9px;
+    height: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 37%;
+    border-radius: 50%;
     background-color: white;
+}
+.cursive {
+    font-family: cursive;
 }
