adding orange font

--- a/src/components/CartIcon.module.css
+++ b/src/components/CartIcon.module.css
@@ -46,6 +46,6 @@
     border-radius: 50%;
     background-color: white;
 }
-.cursive {
-    font-family: cursive;
+.orange__font {
+    color: #fb6100;
 }
