--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -1,3 +1,6 @@
+.menu__images * {
+  font-family: cursive;
+}
 .menu__images {
     display: flex;
     flex-wrap: wrap;
@@ -40,7 +43,6 @@
     font-size: 3.7rem;
     font-weight: 600;
     white-space: pre;
-    font-family: cursive;
     text-shadow: 2px 2px darkorange;
 }
 .hide__overflow {
