--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -1,6 +1,28 @@
 .cart__page * {
     color: #f36805;
 }
+.cart__page h2 {
+    text-align: center;
+}
+.cart__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+.cart__wrapper h3, .cart__wrapper h4 {
+    font-size: 2.7vw;
+    margin: 2vw;
+}
+.takeaway__wrapper {
+    flex-basis: 33.33%;
+    text-align: center;
+    padding-bottom: 5vw;
+}
+.takeaway__image {
+    border-radius: 37%;
+    width: 22vw;
+    height: 17vw;
+    object-fit: cover;
+}
 .show {
     display: block;
     height: 100%;
@@ -14,10 +36,4 @@
 }
 .hide {
     display: none;
-}
-.takeaway__image {
-    border-radius: 50%;
-    width: 190px;
-    height: 150px;
-    object-fit: cover;
 }
