--- a/src/components/AmendTakeaway.module.css
+++ b/src/components/AmendTakeaway.module.css
@@ -2,6 +2,7 @@
     display: flex;
     position: absolute;
     justify-content: center;
+    flex-direction: column;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
