--- a/src/components/CartIcon.module.css
+++ b/src/components/CartIcon.module.css
@@ -13,12 +13,18 @@
     width: auto;
     padding: 0;
     margin: 0;
-    top: 2.5%;
-    right: 3.5%;
+    top: 13px;
+    right: 7%;
     font-size: 1.5rem;
 }
 .cart__icon__removed h3 {
     margin: 0;
+    background-color: white;
+    padding: 0.6rem 1rem 0.6rem 1rem;
+    font-size: 1.3rem;
+    color: black;
+    border-radius: 2rem;
+    border: 2px solid black;
 }
 .cart__icon:hover {
     cursor: pointer;
@@ -48,4 +54,14 @@
 }
 .orange__font {
     color: #fb6100;
+}
+
+@media (max-width: 767px) {
+    .cart__icon__removed { 
+        top: 10px;
+        right: 7%;
+    }
+    .cart__icon__removed h3 {
+       font-size: 1rem;
+    }
 }
