--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -65,4 +65,7 @@
         flex-basis: 100% !important;
         max-width: 100% !important;
     }
+    .dish__name {
+      font-size: 2.8rem;
+    }
   }
