changing display:none to visibility:hidden on components seems to speed up app when toggling between cart and menu

--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -10,7 +10,9 @@
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left:0;
     overflow: unset;
 }
 .holder {
@@ -52,6 +54,7 @@
 }
 .hide__overflow {
   overflow: hidden;
+  visibility: hidden;
   position: fixed;
 }
 @media (max-width: 768px) {
