--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -4,7 +4,7 @@
 
 
 .modal {
-  z-index: -1;
+  z-index: 3;
   border: 2px solid white;
   background-color: white;
   padding: 2rem;
@@ -12,15 +12,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: opacity 1s;
+  visibility: hidden;
+  /* opacity: 0;
+  transition: opacity 1s; */
   border-radius: 10px;
   width: 250px;
 }
 .visible {
-  z-index: 3;
-  opacity: 1;
-  transition: opacity 1s;
+  visibility: visible;
+  /* opacity: 1;
+  transition: opacity 1s; */
 }
 .close__modal {
   position: fixed;
