cart icon css amends

--- a/src/components/CartIcon.module.css
+++ b/src/components/CartIcon.module.css
@@ -4,14 +4,30 @@
   
 .cart__icon {
     background-color: #fb6100;
-    padding: 12px;
-    width: 34px;
+    padding: 15px;
+    width: 47px;
     border-radius: 50%;
     position: fixed;
     z-index: 2;
     right: 20px;
-    top: 15px;
+    top: 14px;
 }
+.cart__icon__text {
+    position: fixed;
+    padding-left: 15px;
+    align-items: center;
+    display: flex;
+    z-index: 2;
+    right: 79px;
+    font-weight: bold;
+    top: 34px;
+    font-size: 1.08rem;
+    height: 40px;
+    border-radius: 13px;
+    width: 101px;
+    background-color: #fb6100;
+}
+
 .cart__icon__removed {
     background-color: transparent;
     width: auto;
@@ -46,9 +62,9 @@
     font-weight: 700;
     position: absolute;
     right: -3px;
-    top: -4px;
+    top: -6px;
     z-index: 1;
-    padding: 7px;
+    padding: 10px;
     height: 8px;
     display: flex;
     justify-content: center;
