--- a/src/components/CartPage.module.css
+++ b/src/components/CartPage.module.css
@@ -18,6 +18,12 @@
     font-size: 2.7vw;
     margin: 2vw;
 }
+.cart__empty {
+    margin: 0 auto;
+    padding-top: 2rem;
+    color: black;
+    font-size: 1.7rem;
+}
 .takeaway__wrapper {
     flex-basis: 33.33%;
     text-align: center;
